--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "D": "^1.0.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "module-name": "^0.0.1-security",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
